--- a/index.html
+++ b/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <style>
+    #horizontalBar {
+      width = 100vw;
+      background-color: "black";
+      height: 100 px;
+    }
+  </style>
 </head>
 <body>
 <h1>Wecome to Simulations</h1>
+<div id="horizontalBar">
+  <h3 id="hBar1">Chemistry</h3>
+</div>
 </body>
   <script>
     console.log("testing 1 2 3");
