--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <style>
     #horizontalBar {
-      width = 100vw;
+      width: 100 vw;
       background-color: "black";
       height: 100 px;
     }
