--- a/index.html
+++ b/index.html
@@ -76,6 +76,6 @@
 	<canvas id="BallBoing"></canvas>
 </div>
 </body>
-	<script src = "ClassPlacement"></script>
+	<script src = "ClassPlacement.js"></script>
 	<script src = "BallBounce.js"></script>
 </html>
