--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
 </div>
 <div id="History" style="display: None;">
 	<span id = "historyFlash" style="position: absolute; width: 65vw; height: 40vh; background-color: #eeeeee;" onclick="change(80, 40, false)">boo</span>
+</div>
+<div id="Physics" style="display: None;">
 	<canvas id="BallBoing"></canvas>
 </div>
 </body>
