--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 <div id="horizontalBar">
   <span id="hBar1" class="searchBarSpan" onclick="showSection('chemistry')">Chemistry</span>
   <span id="hBar2" class="searchBarSpan" onclick="showSection('biology')">Biology</span>
-  <span id="hBar2" class="searchBarSpan" onclick="showSection('history')">History</span>
+  <span id="hBar3" class="searchBarSpan" onclick="showSection('history')">History</span>
+  <span id="hBar4" class="searchBarSpan" onclick="showSection('physics')">History</span>
 </div>
 
 <div id = "classes generator">
