--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <style>
-    #horizontalBar {
-      width: 100vw;
-      background-color: green;
-	  display: block;
-    }
-	.searchBarSpan:hover {
-		background-color: #00aa00;
-	}
-	.searchBarSpan {
-		border: 1px black solid;
-		margin-right: 2px;
-	}
-  </style>
+	<style>
+		#horizontalBar {
+			width: 100vw;
+			background-color: green;
+			display: block;
+		}
+		.searchBarSpan:hover {
+			background-color: #00aa00;
+		}
+		.searchBarSpan {
+			border: 1px black solid;
+			margin-right: 2px;
+		}
+	</style>
+
+	<script type="text/javascript">
+	    (function(c,l,a,r,i,t,y){
+	        c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+	        t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+	        y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+	    })(window, document, "clarity", "script", "skqszuzgix");
+	</script>
 </head>
 <body>
 	<div id="Title"  style="margin: 0; padding: 0;">
